apps/platform/gateway-api/manifests/gateway-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-networking
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-nginx
  namespace: infra-networking
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
